--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.trovalasonda"
-        minSdkVersion 26
+        minSdkVersion 29
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -41,7 +41,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
-
+    implementation 'eo.view:batterymeter:2.0.0'
     implementation 'com.github.harry1453:android-bluetooth-serial:v1.1'
     implementation 'org.osmdroid:osmdroid-android:6.1.10'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.12'
