--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,6 @@ plugins {
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "30.0.2"
 
     defaultConfig {
         applicationId "com.example.trovalasonda"
@@ -32,7 +31,10 @@ android {
     }
     buildFeatures {
         viewBinding true
+        dataBinding true
     }
+    namespace 'com.example.trovalasonda'
+    buildToolsVersion '30.0.2'
 
 }
 
