--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 32
 
     defaultConfig {
-        applicationId "com.example.trovalasonda"
+        applicationId "eu.ydiaeresis.trovalasonda"
         minSdkVersion 29
         targetSdkVersion 32
         versionCode 1
@@ -34,7 +34,7 @@ android {
         viewBinding true
         dataBinding true
     }
-    namespace 'com.example.trovalasonda'
+    namespace 'eu.ydiaeresis.trovalasonda'
 }
 
 dependencies {
