--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,16 +5,53 @@ plugins {
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.10'
 }
 
+//https://devdeeds.com/auto-increment-build-number-using-gradle-in-android/
+def versionPropsFile = file('version.properties')
+def versionBuild
+
+/*Setting default value for versionBuild which is the last incremented value stored in the file */
+if (versionPropsFile.canRead()) {
+    Properties versionProps = new Properties()
+    versionProps.load(new FileInputStream(versionPropsFile))
+    versionBuild = versionProps['VERSION_BUILD'].toInteger()
+} else {
+    throw new FileNotFoundException("Could not read version.properties!")
+}
+
+/*Wrapping inside a method avoids auto incrementing on every gradle task run. Now it runs only when we build apk*/
+ext.autoIncrementBuildNumber = {
+
+    if (versionPropsFile.canRead()) {
+        Properties versionProps = new Properties()
+        versionProps.load(new FileInputStream(versionPropsFile))
+        versionBuild = versionProps['VERSION_BUILD'].toInteger() + 1
+        versionProps['VERSION_BUILD'] = versionBuild.toString()
+        versionProps.store(versionPropsFile.newWriter(), null)
+    } else {
+        throw new FileNotFoundException("Could not read version.properties!")
+    }
+}
+
+// Hook to check if the release/debug task is among the tasks to be executed.
+//Let's make use of it
+gradle.taskGraph.whenReady {taskGraph ->
+    if (taskGraph.hasTask(assembleDebug)) {  /* when run debug task */
+        autoIncrementBuildNumber()
+    } else if (taskGraph.hasTask(assembleRelease)) { /* when run release task */
+        autoIncrementBuildNumber()
+    }
+}
+
 android {
-    compileSdkVersion 32
+    compileSdkVersion 33
 
     defaultConfig {
         applicationId "eu.ydiaeresis.trovalasonda"
         minSdkVersion 29
-        targetSdkVersion 32
-        versionCode 1
-        versionName "1.0"
+        targetSdkVersion 33
 
+        versionCode 100000+versionBuild
+        versionName "1.0.0."+versionBuild
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -40,8 +77,8 @@ android {
 
 dependencies {
     kapt "com.android.databinding:compiler:3.1.4"
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.5.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'eo.view:batterymeter:2.0.0'
     implementation 'com.github.harry1453:android-bluetooth-serial:v1.1'
@@ -51,8 +88,8 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'com.google.android.gms:play-services-location:20.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.1'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.5.1'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
