--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,6 @@ if (versionPropsFile.canRead()) {
 
 /*Wrapping inside a method avoids auto incrementing on every gradle task run. Now it runs only when we build apk*/
 ext.autoIncrementBuildNumber = {
-
     if (versionPropsFile.canRead()) {
         Properties versionProps = new Properties()
         versionProps.load(new FileInputStream(versionPropsFile))
@@ -47,7 +46,7 @@ android {
 
     defaultConfig {
         applicationId "eu.ydiaeresis.trovalasonda"
-        minSdkVersion 29
+        minSdkVersion 24
         targetSdkVersion 33
 
         versionCode 100000+versionBuild
@@ -62,6 +61,7 @@ android {
         }
     }
     compileOptions {
+        coreLibraryDesugaringEnabled = true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -77,6 +77,7 @@ android {
 
 dependencies {
     kapt "com.android.databinding:compiler:3.1.4"
+    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.1.5")
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
