--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,10 +83,11 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'eo.view:batterymeter:2.0.0'
-    implementation 'com.github.harry1453:android-bluetooth-serial:v1.1'
+    implementation files('../../android-bluetooth-serial/androidBluetoothSerial/build/outputs/aar/androidBluetoothSerial-debug.aar')
+    //implementation 'com.github.harry1453:android-bluetooth-serial:v1.1'
     implementation 'org.osmdroid:osmdroid-android:6.1.13'
     implementation 'com.github.MKergall:osmbonuspack:6.9.0'
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.12'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.15'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
