--- a/gradle.properties
+++ b/gradle.properties
@@ -28,4 +28,4 @@ org.gradle.parallel=true
 # The developer environment is optimized for speed and feedback so we nearly always run Gradle jobs with the daemon.
 org.gradle.daemon=true
 
-#org.gradle.warning.mode=all
+org.gradle.warning.mode=all
