--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.7.10'
+    id 'org.jetbrains.kotlin.android'
 }
 
 //https://devdeeds.com/auto-increment-build-number-using-gradle-in-android/
@@ -76,12 +77,15 @@ android {
 }
 
 dependencies {
-    implementation 'com.google.android.datatransport:transport-runtime:3.1.2'
+    implementation 'com.cuneytayyildiz:onboarder:2.0.0'
+    implementation 'com.google.android.datatransport:transport-runtime:3.1.8'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     kapt "com.android.databinding:compiler:3.1.4"
     coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.1.5")
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'eo.view:batterymeter:2.0.0'
     implementation files('../../android-bluetooth-serial/androidBluetoothSerial/build/outputs/aar/androidBluetoothSerial-debug.aar')
@@ -95,8 +99,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'androidx.slidingpanelayout:slidingpanelayout:1.2.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
