--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,7 +77,8 @@ android {
 }
 
 dependencies {
-    implementation 'com.cuneytayyildiz:onboarder:2.0.0'
+    //implementation 'com.cuneytayyildiz:onboarder:2.0.0'
+    implementation 'com.github.deano2390:MaterialShowcaseView:1.3.7'
     implementation 'com.google.android.datatransport:transport-runtime:3.1.8'
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.core:core-ktx:1.9.0'
