--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,7 +77,6 @@ android {
 }
 
 dependencies {
-    //implementation 'com.cuneytayyildiz:onboarder:2.0.0'
     implementation 'com.github.deano2390:MaterialShowcaseView:1.3.7'
     implementation 'com.google.android.datatransport:transport-runtime:3.1.8'
     implementation 'androidx.core:core-ktx:1.9.0'
@@ -90,7 +89,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'eo.view:batterymeter:2.0.0'
     implementation files('../../android-bluetooth-serial/androidBluetoothSerial/build/outputs/aar/androidBluetoothSerial-release.aar')
-    //implementation 'com.github.harry1453:android-bluetooth-serial:v1.1'
+    //implementation 'com.github.buttim:android-bluetooth-serial:1.1.7'
     implementation 'org.osmdroid:osmdroid-android:6.1.13'
     implementation 'com.github.MKergall:osmbonuspack:6.9.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.15'
