--- a/gradle.properties
+++ b/gradle.properties
@@ -30,3 +30,6 @@ org.gradle.daemon=true
 
 org.gradle.warning.mode=all
 org.gradle.unsafe.configuration-cache=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
