--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,7 +82,7 @@ dependencies {
     implementation 'com.google.android.datatransport:transport-runtime:3.3.0'
     implementation 'androidx.core:core-ktx:1.13.1'
     kapt "com.android.databinding:compiler:3.1.4"
-    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:2.0.4")
+    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:2.1.1")
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
@@ -107,4 +107,5 @@ dependencies {
     implementation "io.ktor:ktor-client-core:$ktor_version"
     implementation "io.ktor:ktor-client-cio:$ktor_version"
     implementation "io.ktor:ktor-client-encoding:$ktor_version"
+    implementation("io.nacular.measured:measured:0.4.1")
 }
