--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,12 +43,12 @@ gradle.taskGraph.whenReady {taskGraph ->
 }
 
 android {
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         applicationId "eu.ydiaeresis.trovalasonda"
         minSdkVersion 21
-        targetSdkVersion 34
+        targetSdkVersion 35
 
         versionCode 101000+versionBuild
         versionName "1.0.1."+versionBuild
@@ -79,14 +79,15 @@ android {
 dependencies {
     implementation(platform('org.jetbrains.kotlin:kotlin-bom:1.9.10'))
     implementation 'com.github.deano2390:MaterialShowcaseView:1.3.7'
-    implementation 'com.google.android.datatransport:transport-runtime:3.3.0'
-    implementation 'androidx.core:core-ktx:1.13.1'
+    implementation 'com.google.android.datatransport:transport-runtime:4.0.0'
+    implementation 'androidx.core:core-ktx:1.15.0'
     kapt "com.android.databinding:compiler:3.1.4"
-    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:2.1.1")
+    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:2.1.2")
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
-    implementation 'eo.view:batterymeter:2.0.0'
+    // https://mvnrepository.com/artifact/eo.view/batterymeter
+    //!implementation("eo.view:batterymeter:2.0.0")
     implementation files('../../android-bluetooth-serial/androidBluetoothSerial/build/outputs/aar/androidBluetoothSerial-release.aar')
     //implementation 'com.github.buttim:android-bluetooth-serial:1.1.7'
     implementation 'org.osmdroid:osmdroid-android:6.1.18'
@@ -94,14 +95,14 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.google.android.gms:play-services-location:21.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.7'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.7.7'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.8.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.8.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
     implementation 'androidx.slidingpanelayout:slidingpanelayout:1.2.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3'
     def ktor_version = '2.3.6'
     implementation "io.ktor:ktor-client-core:$ktor_version"
