--- a/gradle.properties
+++ b/gradle.properties
@@ -29,7 +29,7 @@ org.gradle.parallel=true
 org.gradle.daemon=true
 
 org.gradle.warning.mode=all
-org.gradle.unsafe.configuration-cache=true
+#org.gradle.unsafe.configuration-cache=true
 android.defaults.buildfeatures.buildconfig=true
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
