--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,10 +77,12 @@ android {
 }
 
 dependencies {
-    implementation(platform('org.jetbrains.kotlin:kotlin-bom:1.9.10'))
+    implementation(platform('org.jetbrains.kotlin:kotlin-bom:2.1.0'))
     implementation 'com.github.deano2390:MaterialShowcaseView:1.3.7'
     implementation 'com.google.android.datatransport:transport-runtime:4.0.0'
     implementation 'androidx.core:core-ktx:1.15.0'
+    implementation 'androidx.webkit:webkit:1.12.1'
+    implementation 'androidx.core:core:1.15.0'
     kapt "com.android.databinding:compiler:3.1.4"
     coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:2.1.3")
     implementation 'androidx.multidex:multidex:2.0.1'
@@ -101,7 +103,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
     implementation 'androidx.slidingpanelayout:slidingpanelayout:1.2.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.9.0'
     def ktor_version = '2.3.6'
     implementation "io.ktor:ktor-client-core:$ktor_version"
     implementation "io.ktor:ktor-client-cio:$ktor_version"
