--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,9 +80,8 @@ dependencies {
     implementation(platform('org.jetbrains.kotlin:kotlin-bom:2.1.0'))
     implementation 'com.github.deano2390:MaterialShowcaseView:1.3.7'
     implementation 'com.google.android.datatransport:transport-runtime:4.0.0'
-    implementation 'androidx.core:core-ktx:1.15.0'
+    implementation 'androidx.core:core-ktx:1.16.0'
     implementation 'androidx.webkit:webkit:1.13.0'
-    implementation 'androidx.core:core-ktx:1.15.0'
     kapt "com.android.databinding:compiler:3.1.4"
     coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:2.1.5")
     implementation 'androidx.multidex:multidex:2.0.1'
@@ -102,6 +101,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
     implementation 'androidx.slidingpanelayout:slidingpanelayout:1.2.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-core:1.6.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.9.0'
     def ktor_version = '2.3.6'
